refactor: MODERN